# projects

./: .gitattributes  LICENSE  README.md
2023-2-CSML/: README.md  project_dem_prob1_template.ipynb  project_dem_prob2-3_template.ipynb
2023-2-ML4ME/: 2023.12.05_LSTM.py  2023.12.05_LinReg.py
2023-2-ML4ME/filtered-datasets/: us_concat_hs_set1_filtered.csv  us_concat_hs_set3_filtered.csv  us_concat_ms_set1_filtered.csv  us_concat_ms_set2_filtered.csv
2024-2-CRAIP/src/perception/: CMakeLists.txt
2024-2-CRAIP/src/perception/src/: global_object_locator.py  yolo_detection.py  yolo_params.pt  yolo_wrapper.cpp
2024-2-CRAIP/src/vlmaps/: CMakeLists.txt  package.xml
2024-2-CRAIP/src/vlmaps/scripts/: filter_subgoal_coord.py  scf_wrapper.py
2024-2-CRAIP/src/vlmaps/utils/: mp3dcat.py
2024-2-vision-language-robot/src/custom_msgs/: CMakeLists.txt
2024-2-vision-language-robot/src/custom_msgs/msg/: Detection.msg
2025-CS-study/sql/: SQL STARTER 01_CREATE_TABLES.sql  SQL STARTER 01_POST_PROCESSING.sql  SQL STARTER 03.01_03.04_QUIZ.sql  SQL STARTER 03.05_03.09_QUIZ.sql  SQL STARTER 03.10_03.12_QUIZ.sql  SQL STARTER 0310_0312_QUIZ.sql  SQL STARTER 04_QUIZ.sql  SQL STARTER 0501_0503_QUIZ.sql  SQL STARTER 0504_0506_QUIZ.sql  SQL STARTER 0507_0509_QUIZ.sql  SQL STARTER 06_QUIZ.sql  SQL STARTER 0701_QUIZ.sql  SQL STARTER 0702_0703_QUIZ.sql  SQL STARTER 0704_0705_QUIZ.sql  SQL STARTER 0706_0707_QUIZ.sql  SQL STARTER 0708_QUIZ.sql  SQL STARTER 0709_0710_QUIZ.sql  SQL STARTER 0711_0712_QUIZ.sql  SQL_STARTER_08_QUIZ.sql  SQL_STARTER_0901_0902_QUIZ.sql  SQL_STARTER_0903_0905_QUIZ.sql  SQL_STARTER_0906_QUIZ.sql  SQL_STARTER_0907_0909_QUIZ.sql  SQL_STARTER_1001_QUIZ.sql  SQL_STARTER_1002_QUIZ.sql  SQL_STARTER_1003_QUIZ.sql  SQL_STARTER_1101_QUIZ.sql  SQL_STARTER_1102_QUIZ.sql  SQL_STARTER_1103_QUIZ.sql  SQL_STARTER_1104_QUIZ.sql  SQL_STARTER_1105_QUIZ.sql  SQL_STARTER_1106_QUIZ.sql
codecademy-projects/: README.md
codecademy-projects/cpp-text-adventure/: text-adventure.cpp
codecademy-projects/html-css-cheatsheet/: index.html
codecademy-projects/html-project-dasmoto/: dasmoto.html
eeg-classification-alcoholism/: 2023.11.30-dwt-only.py  2023.12.28-pca-ica-assortedt.py  2024.01.04-cnn-only.py  README.md
learning-based-adaptive-cruise-control/: 2023.12.05_dataClean.py  README.md
minesweeper-plus/: LICENSE  README.md
minesweeper-plus/src/: main.py  randomizer.py  (+1 more)
pim-object-detection/: README.md  test.py  train.py
smart-arm/: README.md  hand_distance.py  mediatry.py  pyfirmatastart.py  videofind.py
(+60 files in other folders)
